feat: update env

--- a/env/.env.override.preview.example
+++ b/env/.env.override.preview.example
@@ -8,15 +8,15 @@ NODE_ENV=production
 NEXTJS_STANDALONE=true
 
 # Public URL
-NEXT_PUBLIC_BASE_URL=https://preview.domain.com
+NEXT_PUBLIC_BASE_URL=https://preview-pulse-work.domain.com
 
 # Traefik Configuration
-VPS_SUB_DOMAIN=preview
+VPS_SUB_DOMAIN=preview-pulse-work
 VPS_DOMAIN=domain.com
 
 # Prisma
-DATABASE_URL=postgres://postgres:pulse-work-password@postgres-preview:5432/pulse-work-db
+DATABASE_URL=postgres://postgres:pulse-work-password@postgres-preview-pulse-work:5432/pulse-work-db
 
 # PostgreSQL host
-POSTGRES_HOST=postgres-preview
+POSTGRES_HOST=postgres-preview-pulse-work
 POSTGRES_PORT=5432
