--- a/env/.env.override.production.example
+++ b/env/.env.override.production.example
@@ -8,15 +8,15 @@ NODE_ENV=production
 NEXTJS_STANDALONE=true
 
 # Public URL
-NEXT_PUBLIC_BASE_URL=https://app.domain.com
+NEXT_PUBLIC_BASE_URL=https://pulse-work.domain.com
 
 # Traefik Configuration
-VPS_SUB_DOMAIN=app
+VPS_SUB_DOMAIN=pulse-work
 VPS_DOMAIN=domain.com
 
 # Prisma
-DATABASE_URL=postgres://postgres:pulse-work-password@postgres-app:5432/pulse-work-db
+DATABASE_URL=postgres://postgres:pulse-work-password@postgres-pulse-work:5432/pulse-work-db
 
 # PostgreSQL host
-POSTGRES_HOST=postgres-app
+POSTGRES_HOST=postgres-pulse-work
 POSTGRES_PORT=5432
