--- a/compose.dokploy.yml
+++ b/compose.dokploy.yml
@@ -1,13 +1,13 @@
 services:
     postgres:
         image: postgres:16-alpine
-        container_name: postgres-${VPS_SUB_DOMAIN}
+        container_name: postgres-${ENV_LABEL}
         restart: unless-stopped
         environment:
             - POSTGRES_DB=${POSTGRES_DB}
             - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
         volumes:
-            - ../files/postgres-${VPS_SUB_DOMAIN}:/var/lib/postgresql/data
+            - ../files/postgres-${ENV_LABEL}:/var/lib/postgresql/data
         healthcheck:
             test: ["CMD-SHELL", "pg_isready -U postgres -d postgres"]
             interval: 2s
@@ -18,7 +18,7 @@ services:
             - app-network
 
     nextjs:
-        container_name: nextjs-${VPS_SUB_DOMAIN}
+        container_name: nextjs-${ENV_LABEL}
         env_file:
             - ./.env
         build:
@@ -42,14 +42,14 @@ services:
             - dokploy-network
         labels:
             - traefik.enable=true
-            - traefik.http.routers.nextjs-${VPS_SUB_DOMAIN}.rule=Host(`${VPS_SUB_DOMAIN}.${VPS_DOMAIN}`)
-            - traefik.http.routers.nextjs-${VPS_SUB_DOMAIN}.entrypoints=websecure
-            - traefik.http.routers.nextjs-${VPS_SUB_DOMAIN}.tls.certResolver=letsencrypt
-            - traefik.http.services.nextjs-${VPS_SUB_DOMAIN}.loadbalancer.server.port=3000
+            - traefik.http.routers.nextjs-${ENV_LABEL}.rule=Host(`${VPS_SUB_DOMAIN}.${VPS_DOMAIN}`)
+            - traefik.http.routers.nextjs-${ENV_LABEL}.entrypoints=websecure
+            - traefik.http.routers.nextjs-${ENV_LABEL}.tls.certResolver=letsencrypt
+            - traefik.http.services.nextjs-${ENV_LABEL}.loadbalancer.server.port=3000
 
 networks:
     app-network:
-        name: app-network-${VPS_SUB_DOMAIN}
+        name: app-network-${ENV_LABEL}
         driver: bridge
     dokploy-network:
         external: true
