--- a/env/.env.override.production.example
+++ b/env/.env.override.production.example
@@ -10,6 +10,9 @@ NEXTJS_STANDALONE=true
 # Public URL
 NEXT_PUBLIC_BASE_URL=https://pulse-work.domain.com
 
+# Docker configuration (warn: dot prohibited)
+ENV_LABEL=pulse-work
+
 # Traefik Configuration
 VPS_SUB_DOMAIN=pulse-work
 VPS_DOMAIN=domain.com
