--- a/env/.env.override.preview.example
+++ b/env/.env.override.preview.example
@@ -10,8 +10,11 @@ NEXTJS_STANDALONE=true
 # Public URL
 NEXT_PUBLIC_BASE_URL=https://preview-pulse-work.domain.com
 
+# Docker configuration (warn: dot prohibited)
+ENV_LABEL=preview-pulse-work
+
 # Traefik Configuration
-VPS_SUB_DOMAIN=preview-pulse-work
+VPS_SUB_DOMAIN=preview.pulse-work
 VPS_DOMAIN=domain.com
 
 # Prisma
