fix: dot in next url

--- a/env/.env.override.preview.example
+++ b/env/.env.override.preview.example
@@ -8,7 +8,7 @@ NODE_ENV=production
 NEXTJS_STANDALONE=true
 
 # Public URL
-NEXT_PUBLIC_BASE_URL=https://preview-pulse-work.domain.com
+NEXT_PUBLIC_BASE_URL=https://preview.pulse-work.domain.com
 
 # Docker configuration (warn: dot prohibited)
 ENV_LABEL=preview-pulse-work
