feat: migration user role step 1

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "build": "next build --turbopack",
         "build:analyze": "ANALYZE=true next build",
         "start": "next start",
-        "auto": "pnpm install && pnpm db:reload && pnpm prisma:generate && pnpm prisma:deploy && pnpm fixtures:reload && pnpm dev",
-        "auto:start": "pnpm install && pnpm db:reload && pnpm prisma:generate && pnpm prisma:deploy && pnpm fixtures:reload && pnpm build && pnpm start",
+        "auto": "pnpm install && pnpm db:setup && pnpm prisma:generate && pnpm prisma:deploy && pnpm fixtures:setup && pnpm dev",
+        "auto:start": "pnpm install && pnpm db:setup && pnpm prisma:generate && pnpm prisma:deploy && pnpm fixtures:setup && pnpm build && pnpm start",
         "lint": "eslint",
         "lint:fix": "eslint . --fix",
         "format": "prettier . --check",
